--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -4,93 +4,58 @@
   padding: 0;
   box-sizing: border-box; 
 }
-
-
-
-
 .container {
-  position: relative;
+  top: 0px;
+  left: 0px;
   width: 100%;
   height: 100px;
-  background-color: #4761b4;
-  display: flex;
-  justify-content: flex-start; 
-  align-items: center; 
-  padding-left: 190px; 
+  background: var(---4761b4) 0% 0% no-repeat padding-box;
+  border: 1px solid var(--unnamed-color-70707000);
+  background: #4761B4 0% 0% no-repeat padding-box;
+  border: 1px solid #70707000;
+  opacity: 1;
 }
 
 .container h1 {
-  font-family: 'Space Mono', monospace;
+  position: relative;
+  top: -45px;
+  left: 170px;
+  width: 270px;
+  height: 51px;
+  margin-left: 60px;
   text-align: left;
-  font-weight: bold;
-  font-size: 46px;
-  color: #ffffff;
-}
-
-.menu {
-  position: absolute;
-  width: 115px;
-  height: 70px; 
-  left: 5px; 
+  font: normal normal bold 46px/69px Space Mono;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  opacity: 1;
 }
 
 .linha {
-  width: 90px;
-  height: 15px;
-  background-color: white;
+  position: relative;
+  top: 20px;
+  left: 40px;
+  width: 93px;
+  height: 13px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  opacity: 1;
   margin: 5px ;
   margin-left: 70px;
-}
-
-.input-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  margin-top: 40px;
-  padding: 0 12%; 
-}
-
-.input-container input {
-  flex: 1;
-  height: 50px;
-  background: #FFFFFF;
-  border: 2px solid #707070;
-  border-radius: 35px;
-  padding-left: 40px;
-  position: relative; 
-}
-
-.input-container img {
-  position: absolute; 
-  height: 30px;
-  width: 30px;
-  right: calc(100% - 265px); 
-  top: 50%; 
-  transform: translateY(-49%); 
   
 }
-
-.input-container span {
-  position: relative; 
-  color: #CCCCCC;
-}
-
 .login {
-  position: absolute;
-  top: 50%;
+  position: relative;
+  top:-61px;
   transform: translateY(-50%);
-  right: 3%; 
+  margin-left: 1570px;
   display: flex;
   align-items: center;
-}
-
-.login span {
+  width: 92px;
+  height: 45px;
   text-align: left;
-  font: normal normal normal 2vw/3vh Space Mono; 
+  font: normal normal normal 30px/45px Space Mono;
   letter-spacing: 0px;
   color: #CCCCCC;
   opacity: 1;
-  margin-right: 10px;
 }
 
 .login span:hover {
@@ -98,71 +63,290 @@
 }
 
 .login img {
+  position: relative;
   width: 73px; 
-  height: auto; 
+  height: auto;
+  margin-left: 30px; 
 }
 
-@media screen and (max-width: 768px) {
-  .input-container {
-    padding: 0 10px; 
-    position: relative; 
+@media screen and (max-width: 1280px) {
+  .container h1 {
+   margin-left: 8px;   
   }
-
-  .input-container img {
-    position: absolute; 
-    transform: translateY(-15px) translateX(-215px);
-  
+  .linha {
+    margin-left: 15px;
   }
-
-  .input-container span {
-    position: relative; 
-    margin-right: 5px; 
-  }
-
   .login {
-    right: 2%; 
+    margin-left: 1035px;
   }
-
-  .login span {
-    font-size: 3.5vw; 
-  }
-
-  .login img {
-    width: 10vw; 
-    max-height: auto; 
-  } 
-
-  .container {
-    padding: 0 10px; 
-    position: relative;
-  }
+  
+}
+@media screen and (max-width: 1024px){
 
   .container h1 {
-    font-size: 36px;
-    position: absolute;
-    transform: translateY(-50%) translateY(50%);
-    margin-left: 60px;
-    left: 5px;    
-  }
-
-  .linha {
-    margin: 10%;
-    width: 10vw;
-    height: 8px;
-  }
-
-
+    margin-left: -10px;   
+   }
+   .linha {
+     margin-left: 10px;
+   }
+   .login {
+     margin-left: 770px;
+   }
+   
 }
-@media screen and (max-width: 1300px){
-  .input-container img {
-    position: relative; 
-    height: 30px;
-    width: 30px;
-    right: calc(100% - 40px); 
-    top: 12px; 
-    transform: translateY(-42%); 
+@media screen and (max-width: 912px){
+  .container h1 {
+    margin-left: -35px;
+    font-size: 40px;   
+   }
+   .linha {
+     margin-left: 1px;
+     width: 73px;
+     height: 13px;
+   }
+   .login {
+     margin-left: 670px;
+   }
+   
+}
+@media screen and (max-width: 853px){
+  .container h1 {
+    margin-left: -35px;
+    font-size: 35px;   
+   }
+   .linha {
+     margin-left: 10px;
+     width: 65px;
+     height: 13px;
+   }
+   .login {
+     margin-left: 653px;
+     font-size: 18px;
+   }
+   
+}
+@media screen and (max-width: 820px){
+  .container h1 {
+    margin-left: -35px;
+    font-size: 35px;   
+   }
+   .linha {
+     margin-left: 10px;
+     width: 65px;
+     height: 13px;
+   }
+   .login {
+     margin-left: 602px;
+     font-size: 18px;
+   }
+   
+}
+@media screen and (max-width: 768px){
+  .container h1 {
+    margin-top: 15px;
+    margin-left: -75px;
+    font-size: 30px;   
+   }
+   
+   .linha {
+     top:25px ;
+     margin-left: -10px;
+     width: 50px;
+     height: 10px;
+   }
+   .login {
+     margin-left: 590px;
+     font-size: 18px;
+   }
+   .login img{
+    width: 60px; 
+    height: auto;
     
-  }
-
+   }
+   
 }
-
+@media screen and (max-width: 540px){
+  .container{
+    height:80px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -100px;
+    font-size: 30px;   
+   }
+   
+   .linha {
+     top:15px ;
+     margin-left: -30px;
+     width: 50px;
+     height: 10px;
+   }
+   .login {
+    margin-left: 420px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 50px; 
+    height: auto;
+    
+   }
+   
+}
+@media screen and (max-width: 430px){
+  .container{
+    height:80px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -100px;
+    font-size: 25px;   
+   }
+   
+   .linha {
+     top:15px ;
+     margin-left: -30px;
+     width: 50px;
+     height: 10px;
+   }
+   .login {
+    margin-left: 315px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 50px; 
+    height: auto;
+    
+   }
+   
+}
+@media screen and (max-width: 414px){
+  .container{
+    height:80px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -100px;
+    font-size: 25px;   
+   }
+   
+   .linha {
+     top:15px ;
+     margin-left: -30px;
+     width: 50px;
+     height: 10px;
+   }
+   .login {
+    margin-left: 298px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 50px; 
+    height: auto;
+    
+   }
+   
+}
+@media screen and (max-width: 390px){
+  .container{
+    height:70px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -110px;
+    font-size: 20px;   
+   }
+   
+   .linha {
+     top:13px ;
+     margin-left: -30px;
+     width: 40px;
+     height: 8px;
+   }
+   .login {
+    margin-left: 285px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 40px; 
+    height: auto;
+    
+   }
+   
+}
+@media screen and (max-width: 375px){
+  .container{
+    height:70px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -110px;
+    font-size: 20px;   
+   }
+   
+   .linha {
+     top:13px ;
+     margin-left: -30px;
+     width: 40px;
+     height: 8px;
+   }
+   .login {
+    margin-left: 270px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 40px; 
+    height: auto;
+    
+   }
+  }
+@media screen and (max-width: 360px){
+  .container{
+    height:70px;
+    width: 100%;
+  }
+  .container h1 {
+    margin-top: 5px;
+    margin-left: -110px;
+    font-size: 20px;   
+   }
+   
+   .linha {
+     top:13px ;
+     margin-left: -30px;
+     width: 40px;
+     height: 8px;
+   }
+   .login {
+    margin-left: 258px;
+    font-size: 14px;
+   }
+   .login span{
+     margin-right: -20px;
+   }
+   .login img{
+    width: 40px; 
+    height: auto;
+    
+   }
+   
+}
