--- a/src/componentes/Input/Input.css
+++ b/src/componentes/Input/Input.css
@@ -4,8 +4,7 @@
     align-items: center;
     margin-top: 40px;
   }
-  
-  .input-container input {
+   .input-container input {
     position: absolute;
     display: flex;
     margin-top: 90px;
@@ -15,8 +14,7 @@
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border: 2px solid #707070;
     border-radius: 35px;
-    opacity: 1;
-    
+    opacity: 1; 
   }
   input{
   padding-left: 80px;
@@ -27,10 +25,8 @@
     width: 50px;
     right: calc(100% - 350px); 
     top: 60%; 
-    transform: translateY(45%); 
-    
+    transform: translateY(45%);    
   }
-  
   .input-container input::placeholder {
     position: relative;
     top: 5px;
@@ -40,11 +36,8 @@
     font: normal normal normal 30px/45px Space Mono;
     letter-spacing: 0px;
     color: #CCCCCC;
-    opacity: 1;
-    
-    
+    opacity: 1;   
   }
-
 @media screen and (max-width: 1280px) {
     .input-container {
       position: relative;
@@ -61,11 +54,11 @@
     }
     
     .input-container img {
-      right: calc(100% - 260px); 
+      right: calc(100% - 265px); 
       transform: translateY(-50%);  
     }
     .input-container input::placeholder {
-     left: 60px; 
+     left: -1px; 
     }
   }
 @media screen and (max-width: 1024px){
@@ -84,13 +77,13 @@
      }
      
      .input-container img {
-       right: calc(100% - 160px); 
+       right: calc(100% - 175px); 
        transform: translateY(-55%);
        height: 40px;
        width: 40px;  
      }
      .input-container input::placeholder {
-      left: 50px; 
+      left: -5px; 
   }
   }
 @media screen and (max-width: 912px){
@@ -109,13 +102,13 @@
      }
      
      .input-container img {
-       right: calc(100% - 145px); 
+       right: calc(100% - 155px); 
        transform: translateY(-51%);
        height: 40px;
        width: 40px;  
      }
      .input-container input::placeholder {
-      left: 45px; 
+      left: -10px; 
       font: normal normal normal 25px/45px Space Mono;
   }
   }
@@ -135,13 +128,13 @@
      }
      
      .input-container img {
-       right: calc(100% - 120px); 
+       right: calc(100% - 130px); 
        transform: translateY(-58%);
        height: 30px;
        width: 30px;  
      }
      .input-container input::placeholder {
-      left: 45px; 
+      left: -20px; 
       font: normal normal normal 25px/45px Space Mono;
   }
   }
@@ -161,13 +154,13 @@
     }
     
     .input-container img {
-      right: calc(100% - 90px); 
+      right: calc(100% - 100px); 
       transform: translateY(-58%);
       height: 30px;
       width: 30px;  
     }
     .input-container input::placeholder {
-     left: 40px; 
+     left: -20px; 
      font: normal normal normal 20px/3s5px Space Mono; 
      transform: translateY(1%);
     }   
@@ -188,13 +181,13 @@
   }
   
   .input-container img {
-    right: calc(100% - 70px); 
+    right: calc(100% - 80px); 
     transform: translateY(-58%);
     height: 30px;
     width: 30px;  
   }
   .input-container input::placeholder {
-   left: 40px; 
+   left: -20px; 
    font: normal normal normal 20px/3s5px Space Mono; 
    transform: translateY(1%);
   }   
@@ -215,44 +208,50 @@
   }
   
   .input-container img {
-    right: calc(100% - 80px); 
+    right: calc(100% - 90px); 
     transform: translateY(-67%);
     height: 30px;
     width: 30px;  
   }
   .input-container input::placeholder {
-   left: 40px; 
+   left: -25px; 
    font: normal normal normal 20px/15px Space Mono; 
    top: 1px;
    transform: translateY(1%);
   }   
 }
 @media screen and (max-width: 430px){
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    
+  .input-container{
+    position: absolute;
+    margin-left:23px 
   }
   .input-container input {
-    position: relative;
-    margin-top: -15px;
-    margin-left: -237px;
-    width: 350px;
+    position: absolute;
+    top: -10px;
+    width: 300px;
     height: 30px;
   }
-  
+  input{
+    position: relative;
+    padding-top: -5px;
+    padding-left: 1px;
+  }
   .input-container img {
     right: calc(100% - 70px); 
-    transform: translateY(-90%);
+    transform: translateY(-50%);
     height: 20px;
-    width: 20px;  
+    width: 20px;   
   }
   .input-container input::placeholder {
-   left: 30px; 
-   font: normal normal normal 15px/15px Space Mono; 
-   top: -1px;
-   transform: translateY(1%);
+    position: relative;
+    width: 92px;
+    height: 45px;
+    text-align: left;
+    font: normal normal normal 15px/45px Space Mono;
+    letter-spacing: 0px;
+    color: #CCCCCC;
+    opacity: 1;
+    
   }   
 }
 @media screen and (max-width: 414px){
@@ -264,15 +263,15 @@
   }
   .input-container input {
     position: relative;
-    margin-top: -15px;
-    margin-left: -245px;
+    margin-top: -10px;
+    margin-left: -265px;
     width: 350px;
     height: 30px;
   }
   
   .input-container img {
-    right: calc(100% - 60px); 
-    transform: translateY(-90%);
+    right: calc(100% - 40px); 
+    transform: translateY(-130%);
     height: 20px;
     width: 20px;  
   }
@@ -281,89 +280,155 @@
    font: normal normal normal 15px/15px Space Mono; 
    top: -1px;
    transform: translateY(1%);
+   right: calc(100% - 60px); 
+  transform: translateY(5%);
   }   
 }
 @media screen and (max-width: 390px){
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    
+  .input-container{
+    position: absolute;
+    margin-left:40px 
   }
   .input-container input {
-    position: relative;
-    margin-top: -20px;
-    margin-left: -260px;
-    width: 350px;
-    height: 30px;
-  }
-  
-  .input-container img {
-    right: calc(100% - 50px); 
-    transform: translateY(-100%);
-    height: 20px;
-    width: 20px;  
-  }
-  .input-container input::placeholder {
-   left: 35px; 
-   font: normal normal normal 10px/15px Space Mono; 
-   top: -2px;
-   transform: translateY(1%);
-  }   
-}
-@media screen and (max-width: 375px){
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    
-  }
-  .input-container input {
-    position: relative;
-    margin-top: -20px;
-    margin-left: -250px;
-    width: 320px;
-    height: 30px;
-  }
-  
-  .input-container img {
-    right: calc(100% - 60px); 
-    transform: translateY(-100%);
-    height: 20px;
-    width: 20px;  
-  }
-  .input-container input::placeholder {
-   left: 35px; 
-   font: normal normal normal 10px/15px Space Mono; 
-   top: -2px;
-   transform: translateY(1%);
-  }   
-}
-@media screen and (max-width: 360px){
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    
-  }
-  .input-container input {
-    position: relative;
-    margin-top: -20px;
-    margin-left: -250px;
+    position: absolute;
+    top: -8px;
     width: 300px;
     height: 30px;
   }
-  
+  input{
+    padding-left: 5px;
+    padding-top: 1px;
+  }
   .input-container img {
-    right: calc(100% - 60px); 
-    transform: translateY(-100%);
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 5px;
     height: 20px;
-    width: 20px;  
+    width: 20px;
+    right: calc(100% - 40px); 
+    transform: translateY(-90%);  
   }
   .input-container input::placeholder {
-   left: 35px; 
-   font: normal normal normal 10px/15px Space Mono; 
-   top: -2px;
-   transform: translateY(1%);
+    position: relative;
+    width: 92px;
+    height: 45px;
+    text-align: left;
+    font: normal normal normal 15px/45px Space Mono;
+    letter-spacing: 0px;
+    color: #CCCCCC;
+    opacity: 1;
+    
+  }   
+}
+@media screen and (max-width: 375px){
+  .input-container{
+    position: absolute;
+    margin-left:25px ;
+    
+  }
+  .input-container input {
+    position: absolute;
+    top: -8px;
+    width: 300px;
+    height: 30px;
+  }
+  input{
+    padding-left: 1px;
+    padding-top: 5px;
+  }
+  .input-container img {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 20px;
+    width: 20px;
+    right: calc(100% - 40px); 
+    transform: translateY(-110%);
+
+  }
+  .input-container input::placeholder {
+    position: relative;
+    width: 92px;
+    height: 45px;
+    text-align: left;
+    font: normal normal normal 15px/45px Space Mono;
+    letter-spacing: 0px;
+    color: #CCCCCC;
+    opacity: 1;
+    
+  }   
+}
+@media screen and (max-width: 360px){
+  .input-container{
+    position: absolute;
+    margin-left:20px ;
+    
+  }
+  .input-container input {
+    position: absolute;
+    top: -8px;
+    width: 300px;
+    height: 30px;
+  }
+  input{
+    padding-left: 1px;
+    padding-top: 1px;
+  }
+  .input-container img {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 3px;
+    height: 20px;
+    width: 20px; 
+    right: calc(100% - 40px); 
+    transform: translateY(-80%); 
+  }
+  .input-container input::placeholder {
+    position: relative;
+    width: 92px;
+    height: 45px;
+    text-align: left;
+    font: normal normal normal 15px/45px Space Mono;
+    letter-spacing: 0px;
+    color: #CCCCCC;
+    opacity: 1;
+    
+  }   
+}
+@media screen and (max-width: 280px){
+  .input-container{
+    position: absolute;
+    margin-left:25px ;
+    
+  }
+  .input-container input {
+    position: absolute;
+    top: -8px;
+    width: 200px;
+    height: 30px;
+  }
+  input{
+    padding-left: 1px;
+    padding-top: -1px;
+  }
+  .input-container img {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: 3px;
+    height: 15px;
+    width: 15px; 
+    right: calc(100% - 35px); 
+    transform: translateY(-90%); 
+  }
+  .input-container input::placeholder {
+    position: relative;
+    width: 92px;
+    height: 45px;
+    text-align: left;
+    font: normal normal normal 15px/45px Space Mono;
+    letter-spacing: 0px;
+    color: #CCCCCC;
+    opacity: 1;
+    
   }   
 }
